[gd_scene load_steps=7 format=2]

[ext_resource path="res://material_maker/tools/share/icons.svg" type="Texture" id=1]
[ext_resource path="res://material_maker/tools/share/share_button.gd" type="Script" id=2]
[ext_resource path="res://material_maker/tools/share/preview_viewport.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 16, 32, 16 )

[node name="Share" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
hint_tooltip = "Open Material Maker web site"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectButton" type="TextureButton" parent="."]
margin_top = 12.0
margin_right = 32.0
margin_bottom = 28.0
hint_tooltip = "Connect to web site"
size_flags_vertical = 4
texture_normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendButton" type="TextureButton" parent="."]
margin_left = 36.0
margin_top = 12.0
margin_right = 68.0
margin_bottom = 28.0
hint_tooltip = "Send material to web site"
size_flags_vertical = 4
disabled = true
texture_normal = SubResource( 2 )
texture_disabled = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Send current material to web page"
}

[node name="Space" type="Control" parent="."]
margin_left = 72.0
margin_right = 87.0
margin_bottom = 40.0
rect_min_size = Vector2( 15, 0 )

[node name="PreviewViewport" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="SendButton" to="." method="_on_SendButton_pressed"]
